// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Client .createProject creates a new project 1`] = `
Array [
  Object {
    "body": Object {
      "name": "test",
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/beta/projects",
  },
]
`;

exports[`#Client .deleteComment deletes a existing comment 1`] = `
Array [
  Object {
    "body": undefined,
    "method": "DELETE",
    "uri": "http://localhost:4001/api/beta/stories/5/comments/3",
  },
]
`;

exports[`#Client .deleteProject deletes a existing project 1`] = `
Array [
  Object {
    "body": undefined,
    "method": "DELETE",
    "uri": "http://localhost:4001/api/beta/projects/1",
  },
]
`;

exports[`#Client .getProject requests a single project 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/beta/projects/1234",
  },
]
`;

exports[`#Client .listProjects returns a list of projects with a clubhouse account 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/beta/projects",
  },
]
`;

exports[`#Client .updateComment updatee a existing comment 1`] = `
Array [
  Object {
    "body": Object {
      "text": "this is a test comment",
    },
    "method": "PUT",
    "uri": "http://localhost:4001/api/beta/stories/12/comments/5",
  },
]
`;

exports[`#Client .updateProject updates a existing project 1`] = `
Array [
  Object {
    "body": Object {
      "name": "test",
    },
    "method": "PUT",
    "uri": "http://localhost:4001/api/beta/projects/12",
  },
]
`;
